Error fix in codebase