@@ -1,95 +1,107 @@
 package com.pathshashtra.backend.security;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
+/**
+ * JWT authentication filter — extracts the JWT from:
+ *   1. HttpOnly auth cookie  (preferred — prevents XSS token theft)
+ *   2. Authorization: Bearer <token> header (backward compat)
+ *
+ * Additionally checks the TokenBlacklist to reject revoked tokens
+ * (fixes CRIT-02 — stolen tokens are invalidated on logout/password-change).
+ */
+@Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private static final Logger log = LoggerFactory.getLogger(JwtAuthenticationFilter.class);
 
     private final JwtUtil jwtUtil;
+    private final TokenBlacklist tokenBlacklist;
+    private final ObjectMapper objectMapper;
 
-    public JwtAuthenticationFilter(JwtUtil jwtUtil) {
+    public JwtAuthenticationFilter(JwtUtil jwtUtil,
+                                   TokenBlacklist tokenBlacklist,
+                                   ObjectMapper objectMapper) {
         this.jwtUtil = jwtUtil;
-    }
-
-    @Override
-    protected boolean shouldNotFilter(HttpServletRequest request) {
-        // FIX M3: Removed /actuator skip — if actuator endpoints are accidentally
-        // enabled, they should still require JWT authentication.
-        String path = request.getServletPath();
-        return path.startsWith("/api/auth") || path.equals("/api/health")
-                || path.startsWith("/api/quiz/share")
-                || path.startsWith("/login/oauth2") || path.startsWith("/oauth2");
+        this.tokenBlacklist = tokenBlacklist;
+        this.objectMapper = objectMapper;
     }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
-            HttpServletResponse response,
-            FilterChain filterChain)
+                                    HttpServletResponse response,
+                                    FilterChain filterChain)
             throws ServletException, IOException {
 
-        String header = request.getHeader("Authorization");
+        String token = resolveToken(request);
 
-        // FIX: No Authorization header — do NOT set authentication.
-        // Spring Security's .anyRequest().authenticated() will then reject the request
-        // with 401 via the HttpStatusEntryPoint configured in SecurityConfig.
-        // Previously this was already handled correctly by Spring Security, but
-        // making it explicit here prevents any future misconfiguration bypassing it.
-        if (header == null || !header.startsWith("Bearer ")) {
-            filterChain.doFilter(request, response);
-            return;
-        }
+        if (token != null) {
+            try {
+                if (!jwtUtil.validateToken(token)) {
+                    sendUnauthorized(response, "Invalid or expired token");
+                    return;
+                }
 
-        String token = header.substring(7).trim();
+                // CRIT-02 fix: reject blacklisted (revoked) tokens
+                String jti = jwtUtil.extractJti(token);
+                if (tokenBlacklist.isBlacklisted(jti)) {
+                    sendUnauthorized(response, "Token has been revoked. Please log in again.");
+                    return;
+                }
 
-        if (token.isEmpty()) {
-            sendUnauthorized(response, "Missing token");
-            return;
-        }
-
-        try {
-            if (jwtUtil.isTokenValid(token)) {
                 String email = jwtUtil.extractEmail(token);
-                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                        email, null, Collections.emptyList());
-                SecurityContextHolder.getContext().setAuthentication(authentication);
-            } else {
-                log.debug("Rejected expired JWT for {}", request.getServletPath());
-                sendUnauthorized(response, "Token expired");
+                UsernamePasswordAuthenticationToken auth =
+                        new UsernamePasswordAuthenticationToken(
+                                email, null,
+                                List.of(new SimpleGrantedAuthority("ROLE_USER")));
+                SecurityContextHolder.getContext().setAuthentication(auth);
+
+            } catch (Exception e) {
+                log.warn("JWT processing error: {}", e.getMessage());
+                SecurityContextHolder.clearContext();
+                sendUnauthorized(response, "Authentication failed");
                 return;
             }
-        } catch (Exception e) {
-            log.debug("Invalid JWT: {}", e.getMessage());
-            sendUnauthorized(response, "Invalid token");
-            return;
         }
 
         filterChain.doFilter(request, response);
     }
 
-    /**
-     * FIX BUG 11: Use Map + ObjectMapper for safe JSON serialization.
-     * String concatenation could allow JSON injection if message ever
-     * comes from user input or exception messages containing quotes.
-     */
+    /** Cookie first (prevents XSS token theft), then Authorization header (backward compat). */
+    private String resolveToken(HttpServletRequest request) {
+        // 1. Check HttpOnly cookie
+        String fromCookie = jwtUtil.extractFromCookie(request);
+        if (fromCookie != null) return fromCookie;
+
+        // 2. Fall back to Authorization header
+        String header = request.getHeader(HttpHeaders.AUTHORIZATION);
+        if (header != null && header.startsWith("Bearer ")) {
+            return header.substring(7).trim();
+        }
+        return null;
+    }
+
+    /** Writes a JSON 401 response using ObjectMapper (safe — no string interpolation). */
     private void sendUnauthorized(HttpServletResponse response, String message) throws IOException {
         response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-        response.setContentType("application/json");
-        response.setCharacterEncoding(StandardCharsets.UTF_8.name());
-        com.fasterxml.jackson.databind.ObjectMapper mapper = new com.fasterxml.jackson.databind.ObjectMapper();
-        response.getWriter().write(mapper.writeValueAsString(
-                java.util.Map.of("error", message, "status", 401)));
+        response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+        objectMapper.writeValue(response.getWriter(), Map.of("error", message));
     }
 }
